Added all major containers and made them responsive

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         </header>
         <main>
             <article id="main-boxes">
-                <div>
-
+                <div id="main-boxes-main">
+                    <div class="red-gradient"></div>
                 </div>
-                <div>
-                    <div></div>
-                    <div></div>
+                <div id="main-boxes-secondary-container">
+                    <div class="main-boxes-secondary"></div>
+                    <div class="main-boxes-secondary"></div>
                 </div>
             </article>
             <article class="container">
                 <div></div>
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div id="news-container">
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
+                    <div class="news-box"></div>
                 </div>
             </article>
             <article class="container">
@@ -63,37 +63,41 @@
                         </ul>
                     </div>
                 </div>
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div id="index-funding-container">
+                    <div class="index-funding-box"></div>
+                    <div class="index-funding-box"></div>
+                    <div class="index-funding-box"></div>
+                    <div class="index-funding-box-last"></div>
                 </div>
             </article>
             <article class="container">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div id="category-container">
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                    <div class="category-box"></div>
+                </div>
             </article>
             <article class="container">
                 <div>
                     <div></div>
                     <div></div>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div id="deals-container">
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                    <div class="deals-box"></div>
+                </div>
             </article>
         </main>
         <footer>
