Added some elements, with some rough styling

--- a/index.html
+++ b/index.html
@@ -7,51 +7,122 @@
         <link rel="stylesheet" href="reset.css" type="text/css" media="screen">
         <link rel="stylesheet" href="styles.css" type="text/css" media="screen">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'/>
     </head>
     <body>
         <header>
             <div id="nav-container">
-                <div id="nav-logo"></div>
+                <div id="nav-logo"><a href="#"><img src="assets/tnw.svg" alt="tnw logo"></a></div>
                 <div id="nav-inner-container">
                     <nav>
+                        <div></div>
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>6</li>
-                            <li>7</li>
+                            <li><a href="#">LATEST</a></li>
+                            <li><a href="#">HARD FORK</a></li>
+                            <li><a href="#">PLUGGED</a></li>
+                            <li><a href="#">READ ME</a></li>
+                            <li><a href="#">GROWTH QUARTERS</a></li>
+                            <li><a href="#">SHIFT</a></li>
+                            <li><a href="#">NEUTRAL</a></li>
                         </ul>
                     </nav>
                     <div><i class="fa fa-search"></i></div>
                 </div>
             </div>
             <div>
-                <div id="nav-boost"></div>
+                <div id="nav-boost"><a href="#">Connect with high-level marketing leaders. Join Boost online event</a></div>
             </div>
         </header>
         <main>
             <article id="main-boxes">
                 <div id="main-boxes-main">
-                    <div class="red-gradient"></div>
+                    <div class="red-gradient">
+                        <a href="#">
+                            <div>
+                                <h1>TNW</h1>
+                                <time>Sunday - March 7, 2021</time>
+                            </div>
+                            <div>
+                                <h6>WORLD</h6>
+                                <h2>Asteroid dust helps solve the mystery of dinosaur extinction</h2>
+                                <p>by The Conversation <time>20 hours ago</time></p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div id="main-boxes-secondary-container">
-                    <div class="main-boxes-secondary"></div>
-                    <div class="main-boxes-secondary"></div>
+                    <div class="main-boxes-secondary main-boxes-secondary-first margin-bottom"><div class="black-gradient">
+                        <a href="#">
+                            <h3>LinkedIn and Uber share their digital marketing hacks at Boost online event</h3>
+                        </a>
+                    </div></div>
+                    <div class="main-boxes-secondary main-boxes-secondary-second"><div class="black-gradient">
+                        <a href="#">
+                            <h6>TECH</h6>
+                            <h3>Furious AI researcher creates a list of non-reproducible machine learning papers</h3>
+                            <p>by Ben Dickson <time>1 day ago</time></p>
+                        </a>
                 </div>
             </article>
             <article class="container">
-                <div></div>
+                <h3 id="news-heading">Latest news ></h3>
                 <div id="news-container">
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
-                    <div class="news-box"></div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
+                        <div>
+                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
+                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        </div>
+                    </div>
                 </div>
             </article>
             <article class="container">
