Added some more elements with some rough styling

--- a/index.html
+++ b/index.html
@@ -135,10 +135,78 @@
                     </div>
                 </div>
                 <div id="index-funding-container">
-                    <div class="index-funding-box"></div>
-                    <div class="index-funding-box"></div>
-                    <div class="index-funding-box"></div>
-                    <div class="index-funding-box-last"></div>
+                    <div class="index-funding-box">
+                        <img src="assets/index1.jfif">
+                        <div class="index-funding-heading"><h5>BetterUp</h5></div>
+                        <div class="index-funding-cost">
+                            <p class="index-funding-pricetag">
+                                $125M
+                            </p>
+                            <p class="index-funding-series">
+                                SERIES D
+                            </p>
+                        </div>
+                        <div>
+                            <p>SaaS, +2</p>
+                            <p>Lightspeed Venture Partners +6</p>
+                            <hr>
+                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                        </div>
+                    </div>
+                    <div class="index-funding-box">
+                        <img src="assets/index1.jfif">
+                        <div class="index-funding-heading"><h5>BetterUp</h5></div>
+                        <div class="index-funding-cost">
+                            <p class="index-funding-pricetag">
+                                $125M
+                            </p>
+                            <p class="index-funding-series">
+                                SERIES D
+                            </p>
+                        </div>
+                        <div>
+                            <p>SaaS, +2</p>
+                            <p>Lightspeed Venture Partners +6</p>
+                            <hr>
+                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                        </div>
+                    </div>
+                    <div class="index-funding-box">
+                        <img src="assets/index1.jfif">
+                        <div class="index-funding-heading"><h5>BetterUp</h5></div>
+                        <div class="index-funding-cost">
+                            <p class="index-funding-pricetag">
+                                $125M
+                            </p>
+                            <p class="index-funding-series">
+                                SERIES D
+                            </p>
+                        </div>
+                        <div>
+                            <p>SaaS, +2</p>
+                            <p>Lightspeed Venture Partners +6</p>
+                            <hr>
+                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                        </div>
+                    </div>
+                    <div class="index-funding-box index-funding-box-last">
+                        <img src="assets/index1.jfif">
+                        <div class="index-funding-heading"><h5>BetterUp</h5></div>
+                        <div class="index-funding-cost">
+                            <p class="index-funding-pricetag">
+                                $125M
+                            </p>
+                            <p class="index-funding-series">
+                                SERIES D
+                            </p>
+                        </div>
+                        <div>
+                            <p>SaaS, +2</p>
+                            <p>Lightspeed Venture Partners +6</p>
+                            <hr>
+                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                        </div>
+                    </div>
                 </div>
             </article>
             <article class="container">
