Added more html elements and more rough styling

--- a/index.html
+++ b/index.html
@@ -211,7 +211,43 @@
             </article>
             <article class="container">
                 <div id="category-container">
-                    <div class="category-box"></div>
+                    <div class="category-box">
+                        <h3><a href="">Hard Fork ></a></h3>
+                        <div id="category-hard-fork">
+                            <div class="black-gradient"></div>
+                        </div>
+                        <div>
+                            <a href="#"><div class="category-box-link"></div></a>
+                        </div>
+                        <div class="category-box-heading">
+                            <h5>MOST POPULAR</h5>
+                            <h4><a href="#">GameStop's stock surge has calmed down — so why are investors buying its shares again?</a></h4>
+                            <p><a href="#">The Conversation</a> - <time>5 days ago</time></p>
+                        </div>
+                        <div class="category-latest-container">
+                            <div class="category-latest">
+                                <p>LATEST</p>
+                                <p><a href="#">Jack Dorsey’s Square starts its own bank for merchants</a></p>
+                            </div>
+                            <div id="category-latest-image1">
+                                <a href="#"><div class="category-latest-image-link"></div></a>
+                            </div>
+                        </div>
+                        <div class="category-latest-list-container">
+                            <ul>
+                                <li><a href="#">Just how big are Elon Musk and Bill Gates’ carbon footprints? You might be surprised</a></li>
+                                <hr>
+                                <li><a href="#">Elon Musk loses title of world's richest person to Bezos after more Twitter drama</a></li>
+                                <hr>
+                                <li><a href="#">Bitcoin isn't getting greener — 4 environmental myths about cryptocurrency debunked</a></li>
+                                <hr>
+                                <li><a href="#">Tesla’s bulging Bitcoin buy could be the spark that derails the stock market</a></li>
+                                <hr>
+                                <li><a href="#">Tesla buys $1.5B of Bitcoin — pushing its price to record-breaking levels</a></li>
+                                <hr>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="category-box"></div>
                     <div class="category-box"></div>
                     <div class="category-box"></div>
