Most elements have been added. style and responsiveness added to header and main boxes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="nav-logo"><a href="#"><img src="assets/tnw.svg" alt="tnw logo"></a></div>
                 <div id="nav-inner-container">
                     <nav>
-                        <div></div>
+                        <div><i class="fa fa-bars"></i></div>
                         <ul>
                             <li><a href="#">LATEST</a></li>
                             <li><a href="#">HARD FORK</a></li>
@@ -38,31 +38,40 @@
                 <div id="main-boxes-main">
                     <div class="red-gradient">
                         <a href="#">
-                            <div>
-                                <h1>TNW</h1>
+                            <div id="main-box-heading">
+                                <img src="assets/tnw.svg">
                                 <time>Sunday - March 7, 2021</time>
                             </div>
-                            <div>
+                            <div id="main-box-description">
                                 <h6>WORLD</h6>
                                 <h2>Asteroid dust helps solve the mystery of dinosaur extinction</h2>
-                                <p>by The Conversation <time>20 hours ago</time></p>
+                                <p>by The Conversation - <time>20 hours ago</time></p>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div id="main-boxes-secondary-container">
-                    <div class="main-boxes-secondary main-boxes-secondary-first margin-bottom"><div class="black-gradient">
-                        <a href="#">
-                            <h3>LinkedIn and Uber share their digital marketing hacks at Boost online event</h3>
-                        </a>
-                    </div></div>
-                    <div class="main-boxes-secondary main-boxes-secondary-second"><div class="black-gradient">
-                        <a href="#">
-                            <h6>TECH</h6>
-                            <h3>Furious AI researcher creates a list of non-reproducible machine learning papers</h3>
-                            <p>by Ben Dickson <time>1 day ago</time></p>
-                        </a>
-                </div>
+                    <div class="main-boxes-secondary main-boxes-secondary-first margin-bottom">
+                        <div class="black-gradient">
+                            <a href="#" class="second-boxes-description">
+                                <div class="expand-down"></div>
+                                <div class="align-bottom">
+                                    <h3>LinkedIn and Uber share their digital marketing hacks at Boost online event</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="main-boxes-secondary main-boxes-secondary-second">
+                        <div class="black-gradient">
+                            <a href="#" class="second-boxes-description">
+                                <div class="expand-down"></div>
+                                <div class="align-bottom">
+                                    <h3>Furious AI researcher creates a list of non-reproducible machine learning papers</h3>
+                                    <p>by Ben Dickson - <time>1 day ago</time></p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
             </article>
             <article class="container">
                 <h3 id="news-heading">Latest news ></h3>
@@ -613,10 +622,30 @@
         </main>
         <footer>
             <div>
-                <div></div>
-                <div></div>
+                <div>
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="#">EVENTS</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">ADVERTISE</a></li>
+                        <li><a href="#">JOBS</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
             </div>
-            <div></div>
+            <div>
+                <p>The Next Web © 2006–2021 The Next Web B.V. Made with love in Amsterdam. Powered by StackPath</p>
+            </div>
         </footer>
     </body>
 </html>
