More styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -74,72 +74,74 @@
                     </div>
             </article>
             <article class="container">
-                <h3 id="news-heading">Latest news ></h3>
+                <h3 class="article-heading">Latest news ></h3>
                 <div id="news-container">
                     <div class="news-box">
                         <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
+                        <div class="news-box-description">
                             <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
                             <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news2.jpg" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">SAE's vehicle automation classification system is bunk — it's time for a fresh start</a>
+                            <p><a href="">Matthew Beedham</a> - <time>28 minutes ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news3.webp" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">Here’s what Hasselblad is doing to improve OnePlus' next phone cameras</a>
+                            <p><a href="">Ivan Mehta</a> - <time>4 hours ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news4.jpg" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">This software bundle can help digital creators cut videos, create images, build slideshows, and more</a>
+                            <p><a href="">TNW Deals</a> - <time>7 hours ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news5.jpg" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">Get an extra screen for your laptop and even phone with his 1080p portable screen</a>
+                            <p><a href="">TNW Deals</a> - <time>16 hours ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news6.jpg" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">Hollywood A-list photographers teach you their craft through Photo School</a>
+                            <p><a href="">TNW Deals</a> - <time>17 hours ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news7.jpg" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">How to use AI to transcribe, translate, and add subtitles to your videos</a>
+                            <p><a href="">Dale Markowitz</a> - <time>22 hours ago</time></p>
                         </div>
                     </div>
                     <div class="news-box">
-                        <a href="#"><img src="assets/news1.jpg" alt="news image"></a>
-                        <div>
-                            <a href="#">Is 'made by humans' more appealing than 'made by AI?'</a>
-                            <p><a href="">Fiona J McEvoy</a> - <time>49 minutes ago</time></p>
+                        <a href="#"><img src="assets/news8.webp" alt="news image"></a>
+                        <div class="news-box-description">
+                            <a href="#">What’s bit depth? And how does it impact music?</a>
+                            <p><a href="">by Callum Booth</a> - <time>2 hours ago</time></p>
                         </div>
                     </div>
                 </div>
             </article>
             <article class="container">
-                <div>
-                    <div></div>
+                <div id="index-heading-container">
+                    <div><h3 class="article-heading">Latest funding rounds on Index.co ></h3></div>
                     <div>
-                        <ul>
-
+                        <ul id="index-nav-list">
+                            <li><a href="#">Add info</a></li>
+                            <li><a href="#">Get updates by email</a></li>
+                            <li><a href="#">See more</a></li>
                         </ul>
                     </div>
                 </div>
@@ -155,15 +157,15 @@
                                 SERIES D
                             </p>
                         </div>
-                        <div>
+                        <div class="index-funding-description">
                             <p>SaaS, +2</p>
                             <p>Lightspeed Venture Partners +6</p>
                             <hr>
-                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                            <p class="index-funding-footer">BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
                         </div>
                     </div>
                     <div class="index-funding-box">
-                        <img src="assets/index1.jfif">
+                        <img src="assets/index2.jfif">
                         <div class="index-funding-heading"><h5>BetterUp</h5></div>
                         <div class="index-funding-cost">
                             <p class="index-funding-pricetag">
@@ -173,15 +175,15 @@
                                 SERIES D
                             </p>
                         </div>
-                        <div>
+                        <div class="index-funding-description">
                             <p>SaaS, +2</p>
                             <p>Lightspeed Venture Partners +6</p>
                             <hr>
-                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                            <p class="index-funding-footer">BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
                         </div>
                     </div>
                     <div class="index-funding-box">
-                        <img src="assets/index1.jfif">
+                        <img src="assets/index3.jfif">
                         <div class="index-funding-heading"><h5>BetterUp</h5></div>
                         <div class="index-funding-cost">
                             <p class="index-funding-pricetag">
@@ -191,15 +193,15 @@
                                 SERIES D
                             </p>
                         </div>
-                        <div>
+                        <div class="index-funding-description">
                             <p>SaaS, +2</p>
                             <p>Lightspeed Venture Partners +6</p>
                             <hr>
-                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                            <p class="index-funding-footer">BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
                         </div>
                     </div>
                     <div class="index-funding-box index-funding-box-last">
-                        <img src="assets/index1.jfif">
+                        <img src="assets/index4.jfif">
                         <div class="index-funding-heading"><h5>BetterUp</h5></div>
                         <div class="index-funding-cost">
                             <p class="index-funding-pricetag">
@@ -209,11 +211,11 @@
                                 SERIES D
                             </p>
                         </div>
-                        <div>
+                        <div class="index-funding-description">
                             <p>SaaS, +2</p>
                             <p>Lightspeed Venture Partners +6</p>
                             <hr>
-                            <p>BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
+                            <p class="index-funding-footer">BetterUp: $125 Million Series D And $1.73 Billion Valuation <span>on Pulse 2.0</span></p>
                         </div>
                     </div>
                 </div>
